--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -2,7 +2,7 @@
 <html lang="en" id="root" class="small-size">
 <head>
   <meta charset="UTF-8">
-  {{!-- <link rel="icon" href="/Images/icons/aetna-favicon-32.png" sizes="32x32" type="image/png"> --}}
+  <link rel="icon" href="images/icons/favicon-32.png" sizes="32x32" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>{{site.name}}</title>
   {{#each src.styles}}
